<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orderoo_2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/edit_product_title"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:ems="10"
        android:background="@drawable/bg_form"
        android:layout_marginTop="90dp">
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">
            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints="AUTOFILL_HINT_NAME"
                android:ems="10"
                android:hint="@string/product_name"
                android:inputType="text"
                android:tag="name"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">
            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints="AUTOFILL_HINT_NAME"
                android:hint="@string/product_price"
                android:inputType="numberDecimal"
                android:tag="price"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">
            <EditText
                android:id="@+id/product_weight"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints="AUTOFILL_HINT_NAME"
                android:hint="@string/product_weight"
                android:inputType="numberDecimal"
                android:tag="price"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">
            <EditText
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints="AUTOFILL_HINT_NAME"
                android:hint="@string/product_description"
                android:inputType="textMultiLine"
                android:tag="price"
                android:textAlignment="viewStart" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/product_edit_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_baseline_check_24" />




</androidx.coordinatorlayout.widget.CoordinatorLayout>