<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_sorting_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bottom_dialog_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="25dp"
                android:text="@string/sort_orders"
                android:textColor="@color/orderoo_buttons_1"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/order_sort_default"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_sort_24"
                android:layout_marginStart="25dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                android:gravity="center_vertical"
                android:text="@string/sort_by_default"
                android:textColor="@color/orderoo_2"
                android:textSize="15sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_gravity="center"
            android:background="@color/gray"/>
        <LinearLayout
            android:id="@+id/order_sort_client"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_person_24"
                android:layout_marginStart="25dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                android:gravity="center_vertical"
                android:text="@string/sort_client_name"
                android:textColor="@color/orderoo_2"
                android:textSize="15sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_gravity="center"
            android:background="@color/gray"/>
        <LinearLayout
            android:id="@+id/order_sort_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_phone_android_24"
                android:layout_marginStart="25dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                android:gravity="center_vertical"
                android:text="@string/sort_phone"
                android:textColor="@color/orderoo_2"
                android:textSize="15sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_gravity="center"
            android:background="@color/gray"/>
        <LinearLayout
            android:id="@+id/order_sort_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_calendar_today_32"
                android:layout_marginStart="25dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="25dp"
                android:gravity="center_vertical"
                android:text="@string/sort_date"
                android:textColor="@color/orderoo_2"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>