<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orderoo_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/edit_order_title"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="90dp"
        android:background="@drawable/bg_form">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp">
            <EditText
                android:id="@+id/order_client"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints="AUTOFILL_HINT_NAME"
                android:ems="10"
                android:hint="@string/order_client"
                android:inputType="text"
                android:tag="client"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">
            <EditText
                android:id="@+id/order_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints="AUTOFILL_HINT_NAME"
                android:ems="10"
                android:hint="@string/order_phone"
                android:inputType="phone"
                android:tag="phone"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">
            <EditText
                android:id="@+id/order_date"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints="AUTOFILL_HINT_NAME"
                android:ems="10"
                android:hint="@string/order_date"
                android:inputType="date"
                android:tag="price"
                android:textAlignment="viewStart" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">
            <ListView
                android:layout_margin="@dimen/text_margin"
                android:id="@+id/quantities_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:listSelector="@android:color/transparent"
                android:drawSelectorOnTop="true"
                android:divider="@android:color/transparent"/>
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/order_date_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="164dp"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/quantity_edit_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="90dp"
        app:srcCompat="@drawable/ic_baseline_playlist_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/order_edit_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_baseline_check_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>